# sysY-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: dependabot.yml  rust.yml
samples/: Makefile  ld.sh  lib.cpp  riscv32-elf-gcc.ps1  test.ps1  test0.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  wrap.cpp
src/: ast.rs  context.rs  error.rs  lexer.rs  llvm.rs  main.rs  parser.rs  quaruple.rs  sym_table.rs  syntax.lalrpop  syntax.pest  ty.rs
src/backend/: llvm.rs  mod.rs  riscv32.rs
src/backend/riscv32/: mod.rs  reg_alloc.rs
src/ir/: display.rs  mod.rs  quaruple.rs  trans.rs
src/opt/: dce.rs  flow.rs  gcp.rs  graph.rs  mod.rs
src/quaruple/: display.rs  mod.rs  trans.rs
