[package]
name = "sysy-rs"
version = "0.1.0"
authors = ["Peng Guanwen <pg999w@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"] }
lalrpop-util = "0.19.5"
logos = "0.12.0"
regex = "1.4.3"
string-interner = "0.12.2"

[build-dependencies]
lalrpop = "0.19.5"
