[package]
name = "sysy-rs"
version = "0.1.0"
authors = ["Peng Guanwen <pg999w@outlook.com>"]
edition = "2018"

exclude = ["/samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"] }
itertools = "0.10.0"
lalrpop-util = "0.19.5"
regex = "1.4.6"
string-interner = "0.12.2"

[build-dependencies]
lalrpop = "0.19.5"
