[package]
name = "sysy-rs"
version = "0.1.0"
authors = ["Peng Guanwen <pg999w@outlook.com>"]
edition = "2018"

exclude = ["/samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
clap = { version = "3.0.0-beta.5", features = ["derive", "wrap_help"] }
either = "1.6.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm11-0"] }
itertools = "0.10.3"
lalrpop-util = "0.19.6"
regex = "1.5.4"
string-interner = "0.14.0"

[build-dependencies]
lalrpop = "0.19.6"
